--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
     <h1>Hello, world!</h1>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-1 bg-light">test</div>
-        <div class="col-sm-1 bg-light">test</div>
-        <div class="col-sm-1 bg-light">test</div>
-        <div class="col-sm-1 bg-light">test</div>
-        <div class="col-sm-1 bg-light">test</div>
-        <div class="col-sm-1 bg-light">test</div>
-        <div class="col-sm-1 bg-light">test</div>
-        <div class="col-sm-1 bg-light">test</div>
-        <div class="col-sm-1 bg-light">test</div>
-        <div class="col-sm-1 bg-light">test</div>
-        <div class="col-sm-1 bg-light">test</div>
-        <div class="col-sm-1 bg-light">test</div>
+        <div class="col-1 col-lg-4 bg-light">test</div>
+        <div class="col-1 col-lg-4 bg-light">test</div>
+        <div class="col-1 col-lg-4 bg-light">test</div>
+        <div class="col-1 col-lg-4 bg-light">test</div>
+        <div class="col-1 col-lg-4 bg-light">test</div>
+        <div class="col-1 col-lg-4 bg-light">test</div>
+        <div class="col-1 col-lg-4 bg-light">test</div>
+        <div class="col-1 col-lg-4 bg-light">test</div>
+        <div class="col-1 col-lg-4 bg-light">test</div>
+        <div class="col-1 col-lg-4 bg-light">test</div>
+        <div class="col-1 col-lg-4 bg-light">test</div>
+        <div class="col-1 col-lg-4 bg-light">test</div>
       </div>
       <div class="row">
-        <div class="col-2 bg-secondary">test</div>
-        <div class="col-2 bg-secondary">test</div>
-        <div class="col-2 bg-secondary">test</div>
-        <div class="col-2 bg-secondary">test</div>
-        <div class="col-2 bg-secondary">test</div>
-        <div class="col-2 bg-secondary">test</div>
+        <div class="col-lg-6 bg-secondary">test</div>
+        <div class="col-lg-6 bg-secondary">test</div>
+        <div class="col-lg-6 bg-secondary">test</div>
+        <div class="col-lg-6 bg-secondary">test</div>
+        <div class="col-lg-6 bg-secondary">test</div>
+        <div class="col-lg-6 bg-secondary">test</div>
       </div>
       <div class="row">
         <div class="col-3 bg-warning">test</div>
