--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    en defecto este seria col-1 sin lg
     <div class="container-fluid">
       <div class="row">
         <div class="col-1 col-lg-4 bg-light">test</div>
@@ -30,6 +31,7 @@
         <div class="col-1 col-lg-4 bg-light">test</div>
         <div class="col-1 col-lg-4 bg-light">test</div>
       </div>
+      en defecto este seria col-2
       <div class="row">
         <div class="col-lg-6 bg-secondary">test</div>
         <div class="col-lg-6 bg-secondary">test</div>
